--- a/bc25-produtos-app/frontend/src/app/pages/listar-produtos/listar-produtos.component.css
+++ b/bc25-produtos-app/frontend/src/app/pages/listar-produtos/listar-produtos.component.css
@@ -1,9 +1,21 @@
-.card {
-    
-    margin-bottom: 20px;
-    margin-left: 20px;
-}
-
-.img {
-    width: 100px;
-}
+.container {
+    min-height: 100vh;
+    padding: 20px 150px;
+    display: grid;
+    grid-template-columns: repeat(4, 250px);
+    grid-auto-rows: 350px;
+    justify-content: center;
+    gap: 10px;
+  }
+  
+  .desc {
+    text-align: justify;
+    height: 60px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+  }
+  
+  mat-card-actions {
+    display: flex;
+    justify-content: space-between;
+  }
