--- a/bc25-produtos-app/frontend/src/app/pages/novo-produto/novo-produto.component.html
+++ b/bc25-produtos-app/frontend/src/app/pages/novo-produto/novo-produto.component.html
@@ -1,1 +1,28 @@
-<p>novo-produto works!</p>
+<div class="container">
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>Dados do Produto</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <form action="#" [formGroup]="produtoForm">
+        <mat-form-field appearance="fill">
+          <mat-label>Nome</mat-label>
+          <input type="text" matInput formControlName="nome">
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Preço</mat-label>
+          <input type="number" matInput formControlName="preco">
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Descrição</mat-label>
+          <textarea matInput formControlName="descrição"></textarea>
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Foto</mat-label>
+          <input type="text" matInput formControlName="foto">
+        </mat-form-field>
+        <button type="submit" mat-stroked-button color="primary">Salvar</button>
+      </form>
+    </mat-card-content>
+  </mat-card>
+</div>
