--- a/bc25-produtos-app/frontend/src/app/pages/novo-produto/novo-produto.component.html
+++ b/bc25-produtos-app/frontend/src/app/pages/novo-produto/novo-produto.component.html
@@ -4,10 +4,10 @@
       <mat-card-title>Dados do Produto</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      <form action="#" [formGroup]="produtoForm">
+      <form action="#" [formGroup]="produtoForm" (ngSubmit)="salvarProduto()"><!-- dentro da tag form tenho acesso as informações do form group -->
         <mat-form-field appearance="fill">
           <mat-label>Nome</mat-label>
-          <input type="text" matInput formControlName="nome">
+          <input type="text" matInput formControlName="nome"> <!-- linkando o form control ao input -->
         </mat-form-field>
         <mat-form-field appearance="fill">
           <mat-label>Preço</mat-label>
@@ -15,7 +15,7 @@
         </mat-form-field>
         <mat-form-field appearance="fill">
           <mat-label>Descrição</mat-label>
-          <textarea matInput formControlName="descrição"></textarea>
+          <textarea matInput formArrayName="descricao"></textarea>
         </mat-form-field>
         <mat-form-field appearance="fill">
           <mat-label>Foto</mat-label>
