Adicionando guards no id e Deletar

--- a/bc25-produtos-app/frontend/src/app/pages/novo-produto/novo-produto.component.html
+++ b/bc25-produtos-app/frontend/src/app/pages/novo-produto/novo-produto.component.html
@@ -15,7 +15,7 @@
         </mat-form-field>
         <mat-form-field appearance="fill">
           <mat-label>Descrição</mat-label>
-          <textarea matInput formArrayName="descricao"></textarea>
+          <textarea matInput formControlName="descricao"></textarea>
         </mat-form-field>
         <mat-form-field appearance="fill">
           <mat-label>Foto</mat-label>
