--- a/bc25-produtos-app/frontend/src/app/pages/produto/produto.component.html
+++ b/bc25-produtos-app/frontend/src/app/pages/produto/produto.component.html
@@ -10,7 +10,7 @@
     </mat-card-content>
     <mat-divider></mat-divider>
     <mat-card-actions>
-      <button mat-stroked-button color="warn">
+      <button mat-stroked-button color="warn" (click)="deletar()">
         <mat-icon>delete</mat-icon>
       </button>
     </mat-card-actions>
