--- a/estudando-angular revisao/src/app/views/home/home.component.html
+++ b/estudando-angular revisao/src/app/views/home/home.component.html
@@ -1,4 +1,7 @@
 <app-header></app-header>
+
+<mat-card>
+    <mat-card-title>Data binding</mat-card-title>
 <!--Interoplation-->
 <h1>Bem-Vindo(a), {{user}} </h1>
 
@@ -7,11 +10,39 @@
 <br>
 
 <!--Event Binding-->
-<button (click)="clicar">Clique Aqui</button>
+<button (click)="clicar()">Clique Aqui</button>
 <br>
 
 
 <!--Two Way Data Binding-->
 <input type="text" placeholder="Digite seu nome" [(ngModel)]="user">
+</mat-card>
 
-<app-footer></app-footer>
+<mat-card>
+    <mat-card-title>Diretivas</mat-card-title>
+    <!--Diretivas de Atributo e estruturais -->
+    <h2 [ngStyle]="objStyle">Texto de Exemplo (ngStyle) </h2>
+    <h2 [ngClass]="{'green': !isError, 'red': isError} ">Texto de Exemplo (ngClass) </h2>
+    <h2>Sapinho</h2>
+    <button (click)="mudarSapinho()">Mudar</button> <br>
+    <img  *ngIf="sapinho else elseContainer "src="assets/sapo-1.jpg" alt="Sapinho 1" >
+    <ng-template #elseContainer> 
+        <img src="assets/sapo-2.jpg" alt="Sapinho 2">
+    </ng-template>
+
+    <h2>Peixes</h2>
+    <ul>
+        <li *ngFor=" let peixe of peixes; let i = index">{{i}} ->    {{peixe}} </li>
+    </ul>
+</mat-card>
+
+<mat-card>
+    <mat-card-title>Pipes</mat-card-title>
+    <h2>{{textoPipe | uppercase}} </h2>
+    <h2>{{textoPipe | lowercase}} </h2>
+    <h2>{{numberPipe | number: '2.2-3' }} </h2>
+    <h2>{{nowPipe | date: 'dd/MM/yyyy HH:mm' }} </h2>
+    <h2>{{objPipe | json}} </h2>
+</mat-card>
+
+ <!-- <app-footer></app-footer> -->
