--- a/estudando-angular revisao/src/app/components/header/header.component.html
+++ b/estudando-angular revisao/src/app/components/header/header.component.html
@@ -9,6 +9,7 @@
   <a routerLink="/forms" mat-menu-item>Forms</a>
   <a routerLink="/calcNota" mat-menu-item>Calcula Nota</a>
   <a routerLink="/filmes" mat-menu-item>Filmes</a>
+  <a routerLink="/churros" mat-menu-item>Churro Lista</a>
 </mat-menu>
 </mat-toolbar>  
 
