--- a/projectX/src/app/views/cadastrar-usuario/cadastrar-usuario.component.html
+++ b/projectX/src/app/views/cadastrar-usuario/cadastrar-usuario.component.html
@@ -1,1 +1,14 @@
-<p>cadastrar-usuario works!</p>
+<div id="login-container">
+    <div class="login-form">
+        <h1>Cadastre-se</h1>
+        <button (click)="signInGoogle()">
+            <img src="assets/icons9-google-logo-64/google.svg" alt="Logo Google">
+        </button>
+        <form [formGroup]="formCadastro">
+            <input type="email" placeholder="E-mail" formControlName="email">
+            <input type="password" placeholder="Senha" formControlName="senha">
+            <button type="submit" (click)="createUserEmailAndPassword()">Cadastrar</button>
+        </form>
+        <span>Ainda não é cadastrado? <a>Cadastre-se</a></span>
+    </div>
+</div>
