--- a/projectX/src/app/views/login/login.component.html
+++ b/projectX/src/app/views/login/login.component.html
@@ -2,7 +2,7 @@
     <div class="login-form">
         <h1>Login</h1>
         <button (click)="signInGoogle()">
-            <img src="assets/icons9-google-logo-64/google.svg" alt="Logo Google">
+            <img src="assets/icons8-google-logo-64.png" alt="Logo Google">
         </button>
         <form [formGroup]="formLogin">
             <input type="email" placeholder="E-mail" formControlName="email">
